# incandenza

./: CMakeLists.txt  README.md  main.cpp
include/: Quad.h  Ray.h  Source.h
src/: Quad.cpp  Ray.cpp  Source.cpp
